<resources>
    <string name="app_name">Parking Here</string>
    <string name="home_map">Map</string>
    <string name="home_history">History</string>
    <string name="home_profile">Profile</string>
    <string name="car_number">Biển số xe:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gara_total">Total:</string>
    <string name="gara_booked">Booked:</string>
    <string name="ticket_expired">Expired!</string>
    <string name="btn_checkin">Check in</string>
    <string name="btn_checkout">Check out</string>
    <string name="dialog_token_title">Enter token in gara: </string>
    <string name="invalid_token_message">Invalid token! Please try again</string>
    <string name="error_network">Turn on internet to continue!</string>
    <string name="time_exprited">Expired!</string>
    <string name="dialog_btn_cancel"><u>Hủy</u></string>
    <string name="dialog_btn_continue">Tiếp tục</string>
    <string name="dialog_reset_title">Đặt lại</string>
    <string name="hint_retype_password">Re-type Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_reset_code">Reset code</string>
    <string name="hint_email">Email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_signup"><u>Chưa có tài khoản? Tạo tài khoản!</u></string>
    <string name="login_remember">Giữ tôi đăng nhập</string>
    <string name="login_email">Nhập email</string>
    <string name="login_password">Nhập mật khẩu</string>
    <string name="login_forgot"><u>Quên mật khẩu</u></string>
    <string name="login_btn_login">Đăng nhập</string>
    <string name="login_btn_reset">Lấy lại mật khẩu</string>
    <string name="title_activity_map">Vị trí bãi đỗ</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_register">Tạo tài khoản cho Admin</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_history_2">Lịch sử</string>
    <string name="title_car_get_in">Xe đi vào</string>
    <string name="title_car_get_iut">Xe đi ra</string>
    <string name="title_btn_car_get_in">Cho xe vào</string>
    <string name="title_btn_car_get_iut">Cho xe ra</string>
    <string name="title_car_vehicle">Biển số</string>
    <string name="title_activity_admin">Quản trị</string>
    <string name="title_activity_profile">Thông tin cá nhân</string>
    <string name="title_fill_vehicle">Biển số nhập</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Searching for car park</string>
    <string name="map_gps_dialog_title">GPS chưa bật</string>
    <string name="map_gps_dialog_message">Ứng dụng cần GPS. Bạn có muốn chuyển đến cài đặt?</string>
    <string name="map_mylocation_button">Bật GPS để xem vị trí của bạn</string>
    <string name="pick_place">Please choose a place</string>
    <string name="address_found">Không tìm thấy địa chỉ</string>
    <string name="no_address_found">No address was found</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid latlng used</string>
    <string name="message_cancel_regist_garage">Hủy đăng kí thành công</string>
    <string name="message_regist_garage">Đăng kí thành công</string>
    <string name="map_gara_find">Tìm bãi đỗ gần nhất</string>
    <string name="google_direction_api">https://maps.googleapis.com/maps/api/directions/%1$s?%2$s</string>
    <string name="google_direction_api_redirect">https://www.google.com/maps/dir/?api=1&amp;%1$s</string>
    <string name="map_booking">Đặt chỗ</string>
    <string name="register_button">Đăng ký</string>
    <string name="register_email">Nhập email</string>
    <string name="register_pass">Nhập mật khẩu</string>
    <string name="register_repass">Nhập lại mật khẩu</string>
    <string name="server_error_email">Email sai hoặc không tồn tại</string>
    <string name="server_error_password">Sai mật khẩu</string>
    <string name="error_email">Email lỗi! Vui lòng kiểm tra lại.</string>
    <string name="error_password">Mật khẩu phải nhiều hơn %1$d ký tự</string>
    <string name="login_successfull">Đăng nhập thành công!</string>
    <string name="error_repassword">Mật khẩu nhập lại và mật khẩu không giống nhau</string>
    <string name="error_incorrect_number_slot">Số chỗ bận phải bé hơn tổng số chỗ</string>
    <string name="forget_reset_success">Đặt lại thành công!</string>
    <string name="error_code">Mã lỗi! Hãy kiểm tra lại</string>
    <string name="newpass_button">Xác nhận</string>
    <string name="register_successfull">Đăng ký thành công. Vào email để lấy mã xác nhận</string>
    <string name="dialog_verify">Nhập mã xác nhận</string>
    <string name="verify_description">Tài khoản của bạn cần được xác nhận. Vui lòng kiểm tra email để lấy mã.</string>
    <string name="tooltip_btn_direction">Dẫn đường</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="action_history">Lịch sử</string>
    <string name="action_change_password">Thay đổi mật khẩu</string>
    <string name="action_car_manager">Quản lý xe</string>
    <string name="action_profile">Thông tin cá nhân</string>
    <string name="map_gara_choose">Chọn</string>
    <string name="time_book">Thời gian đặt</string>
    <string name="time_go_in">Thời gian đến</string>
    <string name="time_go_out">Thời gian đi</string>
    <string name="not_have_recort">Bạn chưa có đậu xe</string>
    <string name="not_have_car">Bạn chưa có xe</string>
    <string name="had_delete_car">Bạn vừa xóa xe</string>
    <string name="add_new_car">Thêm xe mới</string>
    <string name="dialog_button_add">Thêm</string>
    <string name="log_cannt_add">Xe đã được đăng kí</string>
    <string name="dialog_button_ok">Đồng ý</string>
    <string name="dialog_message_car_in">Bạn có muốn cho xe này vào?</string>
    <string name="dialog_message_car_out">Bạn có muốn cho xe này ra?</string>
    <string name="dialog_title_open_garage">Mở cửa garage</string>
    <string name="dialog_message_total_slot">Tổng số chỗ</string>
    <string name="not_have_security">Bạn chưa nhân viên nào</string>
    <string name="error_general">Có lỗi đâu đấy</string>
    <string name="error_select_car">Hãy chọn xe</string>
    <string name="logout_successfull">Bạn đã đăng xuất</string>
    <string name="dialog_logout_message">Bạn có chắc chắn muốn đăng xuất</string>
    <string name="fire">Có</string>
    <string name="cancel">Không</string>
    <string name="title_licence_picker">Chọn 1 biển số</string>
    <string name="booking_license_title">Biển số</string>
    <string name="error_book_new">Xe đang trong garage</string>
    <string name="dialog_book_message">Bạn có chắc chắn muốn đặt chỗ</string>
    <string name="dialog_book_title">Xác nhận đặt chỗ</string>
    <string name="map_book_detail">Xem bãi đỗ xe đã đặt</string>
    <string name="dialog_delete_title">Xác nhân xóa xe</string>
    <string name="dialog_delete_car">Bạn có chắc chắn muốn xóa xe</string>
    <string name="dialog_delete_sec_title">Xác nhận xóa bảo vệ</string>
    <string name="dialog_delete_sec_mess">Bạn có chắc chắn muốn xóa?</string>
    <string name="dialog_book_cancel_message">Bạn có chắc chắn muốn hủy bỏ đặt chỗ?</string>
    <string name="dialog_book_refresh_message">Bạn có chắc chắn đặt lại?</string>
    <string name="error_server">Có lỗi xảy ra!</string>
    <string name="book_cancel_successfull">Bạn đã hủy đặt chỗ thành công!</string>
    <string name="today">Hôm nay</string>
    <string name="book_url_map_image">https://maps.googleapis.com/maps/api/staticmap?center=%1$s&amp;zoom=%2$d&amp;size=%3$s&amp;maptype=roadmap&amp;markers=%4$s&amp;key=AIzaSyAPM7L8NUuNVQPMx5xozWcYCxOzKS-T6T8</string>
    <string name="booking_slot_not_available">Đã hết chỗ trống!</string>
    <string name="booking_slot_available">Còn %1$d / %2$d chỗ trống.</string>
    <string name="dialog_add_car_message">Lưu ý! Bạn chỉ được thêm tối đa 5 biển số</string>
    <string name="dialog_btn_add">Thêm</string>
    <string name="dialog_add_car_input_hint">Nhập biển số</string>
    <string name="dialog_add_car_title">Thêm biển số</string>
    <string name="success_add_license">Thêm biển số thành công!</string>
    <string name="error_add_license_limit">Số biển số đã quá giới hạn!</string>
    <string name="booking_message_add_license">Vui lòng thêm biển số xe trước khi đặt.</string>
    <string name="dialog_remove_license_item">Xóa biển số</string>
    <string name="dialog_remove_license_item_message">Bạn có chắc muốn xóa?</string>
    <string name="dialog_save_profile_title">Lưu thông tin</string>
    <string name="dialog_save_profile_message">Bạn có chắc muốn lưu thông tin?</string>
    <string name="notify_booking_timeout_title">Sáp hết thời gian đặt chỗ</string>
    <string name="notify_booking_timeout_body">Thời gian 15 phút sắp hết, hãy vào đặt lại chỗ!</string>
    <string name="booking_detail_refresh">Làm mới</string>
    <string name="booking_detail_cancel">Hủy đặt chỗ</string>
    <string name="notify_booking_canceled_title">Chỗ của bạn đã bị hủy</string>
    <string name="notify_booking_canceled_body">Rất tiếc, đã quá thời gian đặt chỗ cho phép.</string>
    <string name="firstname">Tên</string>
    <string name="lastname">Họ</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="day_of_birth">Ngày sinh</string>
    <string name="profile_save_success">Đã lưu thông tin thành công</string>
    <string name="error_server_email_registered">Email này đã đăng ký</string>
    <string name="booking_detail_refresh_success">Đặt lại thành công</string>
    <string name="dialog_booking_canceled_message">Chỗ của bạn đã bị hủy do quá thời gian cho phép. Thời gian tối đa là 15 phút</string>
    <string name="dialog_booking_canceled_title">Hủy đặt chỗ</string>
    <string name="dialog_car_empty_message">Hãy nhập biển số xe của bạn</string>
    <string name="search_license_hint">Nhập biển số xe</string>
    <string name="action_reload">Làm mới</string>
    <string name="security_checkin_success">Đã xong! Hãy cho xe vào</string>
    <string name="dialog_security_checkin">Cho xe vào</string>
    <string name="dialog_security_checkin_message">Bạn có chắc muốn cho xe vào?</string>
    <string name="dialog_security_checkout">Cho xe ra</string>
    <string name="dialog_security_checkout_message">Bạn có chắc muốn cho xe ra?</string>
    <string name="security_checkout_success">Đã xong! Hãy cho xe ra</string>
    <string name="title_activity_booking">Đặt chỗ</string>
    <string name="title_activity_nearest">Bãi đỗ xe gần nhất</string>
    <string name="title_activity_car_manager">Quản lý xe</string>
    <string name="title_activity_booking_detail">Thông tin đặt chỗ</string>
    <string name="title_activity_security">Thông tin cho bảo vệ</string>
    <string name="title_activity_security_manager">Quản lý bảo vệ</string>
    <string name="title_activity_checkin">Cho xe vào</string>
    <string name="title_activity_checkout">Cho xe ra</string>
    <string name="title_activity_register_security">Thêm bảo vệ</string>
    <string name="action_date">Chọn ngày</string>
    <string name="title_activity_super_admin">SuperAdminActivity</string>
    <string name="dialog_garage_detail_remove">Xóa bãi đỗ xe</string>
    <string name="dialog_garage_detail_message">Bạn có chắc muốn xóa bãi đỗ xe này?</string>
    <string name="dialog_button_cancel">Không</string>
    <string name="gps_not_enabled_title">Không có GPS</string>
</resources>