<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quocngay.carparkbooking.activity.RegisterForOtherActivity">

    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/edtAdminEmailRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtAdminPassRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtAdminEmailRegist"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtAdminRePassRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtAdminPassRegist"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_repass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnAdminRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtAdminRePassRegist"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button_bg"
            android:text="@string/register_button" />
    </RelativeLayout>
</RelativeLayout>
