<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_gara_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="Name" />

        <TextView
            android:id="@+id/tv_gara_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="Address" />

        <TextView
            android:id="@+id/tv_gara_total_slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/gara_total" />

        <TextView
            android:id="@+id/tv_gara_booked_slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/gara_booked" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:background="@color/count_time_background"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="time count" />

    <Button
        android:id="@+id/btn_checkin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/text_color"
        android:layout_weight="1"
        android:text="@string/btn_checkin" />

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textColor="@color/text_color"
        android:layout_weight="1"
        android:visibility="gone"
        android:text="@string/btn_checkout" />
</LinearLayout>
