<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quocngay.carparkbooking.activity.NewPasswordActivity">

    <include layout="@layout/app_background" />

    <RelativeLayout
        android:id="@+id/form_newpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/colorLoginBg"
        android:padding="30dp">

        <EditText
            android:id="@+id/edt_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edt_renewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_newpass"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_repass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_renewpass"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextLight"
            android:background="@drawable/custom_button_bg"
            android:text="@string/newpass_button" />
    </RelativeLayout>
</RelativeLayout>
