<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dl_verify_description"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/verify_description" />

    <LinearLayout
        android:id="@+id/form_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dl_verify_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_code1"
            style="@style/PinEeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_code2"
            style="@style/PinEeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_code3"
            style="@style/PinEeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_code4"
            style="@style/PinEeditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_code"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button_bg"
        android:text="@string/dialog_btn_continue"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_btn_cancel"
        android:textAlignment="center" />

</RelativeLayout>
