<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quocngay.carparkbooking.activity.SecurityActivity"
    android:orientation="vertical"
    android:weightSum="1"
    >
    <include layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTimeIn">

        <Spinner
            android:id="@+id/spnCarIn"
            android:layout_width="145dp"
            android:layout_height="27dp"
            android:layout_marginLeft="43dp"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            tools:layout_editor_absoluteY="37dp"
            android:layout_below="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="48dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/title_car_get_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="33sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="109dp"
            android:layout_height="26dp"
            android:layout_below="@+id/textView6"
            android:layout_marginEnd="35dp"
            android:layout_toStartOf="@+id/spnCarIn"
            android:text="@string/title_car_vehicle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="109dp"
            android:layout_height="26dp"
            android:text="@string/title_fill_vehicle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/edtSearchCarIn"
            tools:layout_editor_absoluteX="16dp"
            android:layout_below="@+id/edtSearchCarIn"
            android:layout_alignStart="@+id/edtSearchCarIn"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/edtCarIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignStart="@+id/spnCarIn"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnCarGoIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:text="@string/title_btn_car_get_in"
            android:layout_below="@+id/edtCarIn"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/edtSearchCarIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/action_search"
            android:layout_below="@+id/textView8"
            android:layout_alignStart="@+id/textView8" />

        <ImageButton
            android:id="@+id/btnDeleteSearchIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edtSearchCarIn"
            android:layout_toEndOf="@+id/edtSearchCarIn"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layoutTimeIn"
        android:layout_marginTop="23dp"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentBottom="true"
        android:layout_weight="0.84">

        <Button
            android:id="@+id/btnCarGoOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_car_get_iut"
            android:layout_below="@+id/edtSearchCarOut"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:id="@+id/spnCarOut"
            android:layout_width="145dp"
            android:layout_height="27dp"
            android:layout_alignBottom="@+id/textView11"
            android:layout_marginStart="45dp"
            android:layout_toEndOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/title_car_vehicle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="35dp"
            android:text="@string/title_car_get_iut"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="33sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="37dp"
            android:id="@+id/textView10" />

        <EditText
            android:id="@+id/edtSearchCarOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:layout_below="@+id/spnCarOut"
            android:layout_alignStart="@+id/textView11"
            android:layout_marginTop="17dp" />

        <ImageButton
            android:id="@+id/btnDeleteSearchOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/edtSearchCarOut"
            android:layout_toEndOf="@+id/edtSearchCarOut"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </RelativeLayout>
</LinearLayout>
